transfer folder structure

--- a/MicroRabbit.Transfer.Domain/MicroRabbit.Transfer.Domain.csproj
+++ b/MicroRabbit.Transfer.Domain/MicroRabbit.Transfer.Domain.csproj
@@ -5,11 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="CommandHandlers\" />
+    <Folder Include="Commands\" />
     <Folder Include="EventHandlers\" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\MicroRabbit.Domain.Core\MicroRabbit.Domain.Core.csproj" />
+    <Folder Include="Events\" />
+    <Folder Include="Interfaces\" />
+    <Folder Include="Models\" />
   </ItemGroup>
 
 </Project>
